# python_poetry_template

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
python_poetry_template/: some_executable.py
scripts/: black_auto-correct.sh  run_some_executable.sh  update_poetry_env.sh  validate_quick.sh
